--- a/TCC-EngenhariaComputacao-Totem/src/templates/home.html
+++ b/TCC-EngenhariaComputacao-Totem/src/templates/home.html
@@ -12,8 +12,8 @@
 
     <h1>Paciente novo?</h1>
     <div>
-        <a href="/senha" class="btn btn-outline-secondary">Sim</a>
-        <a href="/buscar-usuario-cpf" class="btn btn-outline-secondary">Não</a>
+        <a href="/senha" class="btn btn-primary">Sim</a>
+        <a href="/buscar-usuario-cpf" class="btn btn-primary">Não</a>
     </div>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
