--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/paciente/form.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/paciente/form.html
@@ -182,7 +182,7 @@
 const webcamElement = document.getElementById('webcam');
 const captureButton = document.getElementById('capture');
 const canvasElement = document.getElementById('canvas');
-const imagemBase64Input = document.getElementById('imagemBase64'); // Campo oculto
+const imagemBase64Input = document.getElementById('imagemBase64');
 
 navigator.mediaDevices.getUserMedia({ video: true })
     .then(function (stream) {
@@ -199,7 +199,7 @@ captureButton.addEventListener('click', function () {
     context.drawImage(webcamElement, 0, 0, webcamElement.videoWidth, webcamElement.videoHeight);
 
     // Compactação da imagem antes da conversão para base64
-    const quality = 0.6; // Qualidade da compactação (0 a 1). 0.6 geralmente é uma boa escolha para JPEG.
+    const quality = 0.6;
     canvasElement.toBlob(function(blob) {
         const reader = new FileReader();
         reader.onloadend = function() {
@@ -209,7 +209,7 @@ captureButton.addEventListener('click', function () {
             // Atualize o campo oculto com a imagem compactada em formato base64
             imagemBase64Input.value = imageDataUrl;
 
-            // Exiba a imagem compactada (opcional)
+            // Exiba a imagem
             const capturedImage = document.getElementById('captured-image');
             capturedImage.src = 'data:image/jpeg;base64,' + imageDataUrl;
             capturedImage.style.display = 'block';
