--- a/TCC-EngenhariaComputacao-Totem/src/templates/form-cpf.html
+++ b/TCC-EngenhariaComputacao-Totem/src/templates/form-cpf.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Document</title>
+    <style>
+        .container {
+            position: relative;
+            width: 1000px;
+            height: 100px;
+            margin: 0 auto;
+        }
+
+        .text-box {
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #fff;
+            padding: 15px;
+            border-radius: 8px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
 
@@ -27,6 +47,11 @@
         <input type="text" class="form-control" name="cpf" placeholder="Digite o CPF" maxlength="14" oninput="formatarCPF(this)" required>
         <button type="submit" class="btn btn-primary">Buscar</button>
     </form>
+        <div class="container">
+            <div class="text-box">
+                <p>Ao clicar em "Buscar" o reconhecimento facial iniciará!</p>
+            </div>
+        </div>
 
     <script>
         function formatarCPF(campo) {
