--- a/TCC-EngenhariaComputacao-Totem/src/templates/reconhecimento.html
+++ b/TCC-EngenhariaComputacao-Totem/src/templates/reconhecimento.html
@@ -10,7 +10,16 @@
     <title>Totem</title>
 </head>
 <body>
-    <img src="{{ url_for('video') }}" width="640" height="480">
+{% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class="flashes">
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+<img src="{{ url_for('video') }}" width="640" height="480">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
