--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/form.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/form.html
@@ -4,112 +4,66 @@
 <head>
     <link rel="stylesheet" th:href="@{/css/style.css}" />
     <title>TCC | Agendamento</title>
+    <script>
+    // Quando a página carrega
+    document.addEventListener("DOMContentLoaded", function() {
+        var idMedico = localStorage.getItem("idMedico");
+        document.getElementById("medico").value = idMedico || "";
+    });
+
+    function redirecionarPagina() {
+
+    var idEspecialidade = document.getElementById("especialidade").value;
+    var idMedico = document.getElementById("medico").value;
+
+    // Armazenar o valor no localStorage
+    localStorage.setItem("idMedico", idMedico);
+
+    if (idEspecialidade && idMedico) {
+
+        window.location.href = "agendar?idEspecialidade=" + idEspecialidade + "&idMedico=" + idMedico;
+        }
+    }
+</script>
 </head>
 <body>
 
 <section class="layout-content" layout:fragment="content">
     <main role="main">
 
+        <input type="hidden" id="especialidade" th:value="${idEspecialidade}">
 
-        <div class="album py-5 bg-light">
-            <div class="container d-flex justify-content-center align-items-center">
+        <div class="mb-3">
+            <label for="medico" class="form-label">Médicos</label>
+            <select id="medico" name="medico" th:value="${idMedico}" onchange="redirecionarPagina()">
+                <option value="" th:selected="${idMedico eq null or idMedico eq ''}">Selecione um médico</option>
+                <option th:each="medico : ${medicos}" th:value="${medico.id}" th:text="${medico.nome}" th:selected="${medico.id eq idMedico}"></option>
+            </select>
+        </div>
 
-                <div class="row">
-                    <div class="col-md-12">
+        <div th:if="${not #lists.isEmpty(horarios)}">
+            <form method="post" th:action="@{/agendamentos/agendar}" th:object="${cadastroAgendamentoDto}">
 
-                        <form th:action="${agendamento.id == null} ? @{/agendamentos/salvar} : @{/agendamentos/editar}"
-                              th:object="${agendamento}"
-                              method="POST" class="was-validated">
+                <input type="hidden" th:value="${cadastroAgendamentoDto.especialidade}" th:field="${cadastroAgendamentoDto.especialidade}">
+                <input type="hidden" th:value="${cadastroAgendamentoDto.medico}" th:field="${cadastroAgendamentoDto.medico}">
+                <input type="hidden" th:value="${cadastroAgendamentoDto.paciente}" th:field="${cadastroAgendamentoDto.paciente}">
 
-                            <div class="form-row">
-                                <div class="form-group col-md-12">
-                                    <small class="form-text text-muted">Selecione
-                                        a especialidade médica referente a sua consulta.</small>
-                                    <input type="text" class="form-control"
-                                           id="especialidade" placeholder="Pediatria"
-                                           th:field="*{especialidade.titulo}" required />
-                                    <div class="invalid-feedback">
-                                        Especialidade é obrigatória.
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="form-row">
-                                <div class="form-group col-md-12">
-                                    <div class="card">
-                                        <div class="card-header">
-                                            Indique o médico desejado
-                                        </div>
-                                        <div class="card-body" id="medicos">
-                                            <!-- options by jQuery -->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="form-row">
-                                <div class="form-group col-md-12">
-                                    <small class="form-text text-muted">Selecione
-                                        a data da consulta</small>
-                                    <input class="form-control" type="date" id="data"
-                                           th:field="*{dataConsulta}" required/>
-                                    <div class="invalid-feedback">
-                                        Data é obrigatória.
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="form-row">
-                                <div class="form-group col-md-12">
-                                    <small id="hr-small" class="form-text text-muted">Horários disponíveis
-                                        para a consulta</small>
-                                    <select id="horarios" class="custom-select" size="5"
-                                            th:field="*{horario.id}" required>
-                                        <option th:value="*{horario.id}"
-                                                th:text="*{horario.horaMinuto}"></option>
-                                    </select>
-                                    <div class="invalid-feedback">Horário é obrigatório</div>
-                                </div>
-                            </div>
-
-                            <input type="hidden" th:field="*{id}"/>
-                            <div class="form-group row">
-                                <div class="col-sm-10">
-                                    <button id="btn-salvar" type="submit" class="btn btn-primary"
-                                            data-toggle="tooltip" data-placement="right" title="Salvar">
-                                        <i class="fas fa-save"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-
-                    </div>
+                <div class="mb-3">
+                    <label for="horario" class="form-label">Horarios disponiveis</label>
+                    <select id="horario"  th:field="${cadastroAgendamentoDto.horario}"  required>
+                        <option th:each="horario : ${horarios}" th:value="${horario.id}" th:text="${horario.horaMinuto}"></option>
+                    </select>
                 </div>
-            </div>
+
+                <div>
+                    <button type="submit" class="btn btn-primary">Cadastrar</button>
+                    <a th:href="@{/agendamentos}" class="btn btn-primary">Voltar</a>
+                </div>
+            </form>
         </div>
 
     </main>
-
 </section>
-<script	th:src="@{/js/agendamento.js(v=${version})}" th:fragment="js"></script>
-<script th:inline="javascript" th:fragment="inlinescript">
-	// buscar o médico pela especialidade
-	/*[# th:if="${agendamento.medico != null}" ]*/
-		$( document ).ready(function() {
-			var id = [[${agendamento.medico.id}]];
-			var titulo = [(${#strings.concat("'",agendamento.especialidade.titulo,"'")})];
-			$.get( "/medicos/especialidade/titulo/" + titulo, function( result ) {
-				$.each(result, function (k, v) {
-					$("#medicos").append(
-						 '<div class="custom-control custom-radio">'
-						+  '<input class="custom-control-input" type="radio" id="customRadio'+ k +'" name="medico.id" value="'+ v.id +'" required '+ (v.id == id ? "checked" : "")+' />'
-						+  '<label class="custom-control-label" for="customRadio'+ k +'">'+ v.nome +'</label>'
-						+'</div>'
-					);
-				});
-			});
-		});
-	/*[/]*/
-	</script>
+
 </body>
 </html>
