Redirecionamento automatico, ajuste no link do redirecionamento e botão para voltar

--- a/TCC-EngenhariaComputacao-Totem/src/templates/reconhecimento.html
+++ b/TCC-EngenhariaComputacao-Totem/src/templates/reconhecimento.html
@@ -20,6 +20,18 @@
             {% endif %}
         {% endwith %}
 <img src="{{ url_for('video') }}" width="640" height="480">
+<script>
+        // Função para redirecionar para a home após 10 segundos
+        function redirectToHome() {
+            window.location.href = "/";
+        }
+
+        // Chamar a função quando a página terminar de carregar
+        document.addEventListener("DOMContentLoaded", function() {
+            // Redirecionar após 10 segundos
+            setTimeout(redirectToHome, 10000);  // 10000 milissegundos = 10 segundos
+        });
+    </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
