--- a/TCC-EngenhariaComputacao-Totem/src/templates/senha.html
+++ b/TCC-EngenhariaComputacao-Totem/src/templates/senha.html
@@ -15,7 +15,7 @@
     <script>
         // Função para redirecionar para a home após 10 segundos
         function redirectToHome() {
-            window.location.href = "/home";
+            window.location.href = "/";
         }
 
         // Chamar a função quando a página terminar de carregar
