--- a/TCC-EngenhariaComputacao-Totem/src/static/css/style.css
+++ b/TCC-EngenhariaComputacao-Totem/src/static/css/style.css
@@ -31,3 +31,30 @@ form{
     color: #d9534f;
 }
 
+.container {
+    position: relative;
+    width: 1000px;
+    height: 100px;
+    margin: 0 auto;
+}
+
+.text-box {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 15px;
+    border-radius: 8px;
+    text-align: center;
+}
+
+#voltar {
+    margin-left: 3px;
+}
+
+#buscar {
+    margin-left: 3px;
+}
+
