--- a/TCC-EngenhariaComputacao-Totem/src/templates/form-cpf.html
+++ b/TCC-EngenhariaComputacao-Totem/src/templates/form-cpf.html
@@ -7,26 +7,6 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Document</title>
-    <style>
-        .container {
-            position: relative;
-            width: 1000px;
-            height: 100px;
-            margin: 0 auto;
-        }
-
-        .text-box {
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: rgba(0, 0, 0, 0.7);
-            color: #fff;
-            padding: 15px;
-            border-radius: 8px;
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
 
@@ -45,7 +25,9 @@
     <h1>Digite seu CPF</h1>
     <form method="post" action="{{ url_for('buscar-usuario') }}">
         <input type="text" class="form-control" name="cpf" placeholder="Digite o CPF" maxlength="14" oninput="formatarCPF(this)" required>
-        <button type="submit" class="btn btn-primary">Buscar</button>
+        <button id="buscar" type="submit" class="btn btn-primary">Buscar</button>
+        <br>
+            <button id="voltar" onclick="window.location.href='http://localhost:4000/'" type="button" class="btn btn-primary">Voltar</button>
     </form>
         <div class="container">
             <div class="text-box">
