--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/medico/lista.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/medico/lista.html
@@ -39,7 +39,7 @@
                 <tbody>
                 <tr th:each="medico : ${medicos}">
                     <td th:text="${medico.nome}"></td>
-                    <td th:number="${medico.crm}"></td>
+                    <td th:text="${medico.crm}"></td>
                     <td th:text="${medico.especialidade.titulo}"></td>
                     <td>
                         <a th:href="@{/medico/detalhes(idMedico=${medico.id})}" class="btn btn-outline-secondary">Detalhes</a>
