--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/lista.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/lista.html
@@ -7,15 +7,21 @@
 <body>
 <div layout:fragment="content">
     <h1>Agendamentos</h1>
-    <div class="alert alert-primary" th:if="${#lists.isEmpty(agendamentos)}">
-        Não possui nenhum agendamento!
+
+    <div class="card-agendamento">
+        <div class="tipo-agendamento">
+            <a href="/agendamentos/consulta">
+                <img th:src="@{/images/consulta.jpg}" alt="consulta" width="700" height="445">
+                <h2>Consultas</h2>
+            </a>
+        </div>
+        <div class="tipo-agendamento">
+            <a href="/agendamentos/exame">
+                <img th:src="@{/images/exame.jpg}" alt="exame" width="700" height="445">
+                <h2>Exames</h2>
+            </a>
+        </div>
     </div>
-    <div class="alert alert-success" th:if="${mensagem}" th:text="${mensagem}"></div>
-    <div class="alert alert-danger" th:if="${erro}" th:text="${erro}"></div>
-
-
-    <a href="/agendamentos/agendar" class="btn btn-primary">Novo Agendamento</a>
-
 </div>
 
 </body>
