--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/login/login.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/login/login.html
@@ -1,45 +1,41 @@
 <!doctype html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width,  initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,  initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="icon" th:href="@{/images/favicon.ico}" />
-    <link rel="stylesheet" th:href="@{/css/login.css}"  />
+    <link rel="stylesheet" th:href="@{/css/login.css}" />
     <link rel="stylesheet" th:href="@{/css/layout.css}">
     <title>TCC | Login </title>
 </head>
+
 <body>
 
     <div class="alert alert-success" th:if="${mensagem}" th:text="${mensagem}"></div>
 
-    <div class = "card-login">
+    <div class="card-login">
 
         <div class="formulario-login">
 
             <div class=" w-100 d-flex flex-column justify-content-center p-5">
 
                 <div class="text-center">
-
+                    <img th:src="@{/images/Agp-lab-logo.png}" alt="logo" width="120" height="70">
                     <h3 class="card-title">Seja bem-vindo.</h3>
                     <p class="text-muted">Realize seu login para continuar</p>
                 </div>
 
-                <form th:action="@{/login}" method="post" >
+                <form th:action="@{/login}" method="post">
                     <div class="mb-4">
                         <label for="inputEmail">Email</label>
-                        <input type="email" id="inputEmail" class="form-control"
-                               placeholder="Email address" name="username" required autofocus>
+                        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" name="username" required autofocus>
                     </div>
                     <div class="mb-4">
                         <label for="password" class="form-label">Senha</label>
-                        <input type="password" class="form-control" id="password" name="password"
-                               placeholder="Senha" required>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Senha" required>
                     </div>
 
                     <div class="login-botao">
@@ -58,9 +54,8 @@
     </div>
 
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                crossorigin="anonymous">
-        </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
