--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/layout.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/layout.html
@@ -13,50 +13,44 @@
           crossorigin="anonymous">
     <link rel="icon" th:href="@{/images/favicon.ico}" />
     <link rel="stylesheet" th:href="@{/css/style.css}" />
-    <link rel="stylesheet" th:href="@{/css/layout.css}">
+    <link rel="stylesheet" th:href="@{/css/header.css}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <nav class="texto-nav navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">
-                <img class="mb-4" th:src="@{/images/Agp-lab-logo.png}" alt=""
-                                                  width="120" height="70">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/agendamentos">Agendamentos</a>
-                    </li>
 
-                    <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Administrador
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/especialidade">Especialidades</a></li>
-                            <li><a class="dropdown-item" href="/exame">Exames</a></li>
-                            <li><a class="dropdown-item" href="/medico">Médicos</a></li>
-                            <li><a class="dropdown-item" href="/paciente">Pacientes</a></li>
-                        </ul>
+    <header class="header">
+        <nav class="navegacao">
+            <a href="/">
+                <img th:src="@{/images/image-removebg-preview (2)_resized.png}" alt="logo">
+            </a>
+            <div class="links">
+                <ul>
+                    <li>
+                        <a href="/agendamentos"> Agendamentos</a>
                     </li>
-                    <li class="nav-item">
-                        <div class="logout btn-group mb-2 mr-sm-2" >
-                            <a class="btn btn-danger button__logout" aria-current="page" href="/logout">Logout</a>
+                    <li sec:authorize="hasRole('ROLE_ADMIN')">
+                        <div class="dropdown">
+                            <span>Cadastros</span>
+                            <div class="dropdown-content">
+                                <a href="/especialidade">Especialidades</a>
+                                <a href="/exame">Exames</a>
+                                <a href="/medico">Médicos</a>
+                                <a href="/paciente">Pacientes</a>
+                            </div>
                         </div>
+                    </li>
+                    <li>
+                        <a href="/logout">Sair</a>
                     </li>
                 </ul>
             </div>
-        </div>
-    </nav>
+        </nav>
 
 
+    </header>
 
     <main>
         <div layout:fragment="content"></div>
