--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/paciente/form.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/paciente/form.html
@@ -1,66 +1,54 @@
 <!doctype html>
 <html lang="pt-br"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous">
+    crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="icon" th:href="@{/images/favicon.ico}" />
-    <link rel="stylesheet" th:href="@{/css/layout.css}">
     <title>TCC | Novo Paciente</title>
 </head>
 <body>
-<nav class="texto-nav navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">
-            <img class="mb-4" th:src="@{/images/Agp-lab-logo.png}" alt=""
-                 width="120" height="70">
+
+<header class="header">
+    <nav class="navegacao">
+        <a href="/">
+            <img th:src="@{/images/Agp-lab-logo-branca.png}" alt="logo" width="200" height="50">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+        <div class="links">
+            <ul>
+                    <a href="/agendamentos"> Agendamentos</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/agendamentos">Agendamentos</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Administrador
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/especialidade">Especialidades</a></li>
-                        <li><a class="dropdown-item" href="/medico">Médicos</a></li>
-                        <li><a class="dropdown-item" href="/paciente">Pacientes</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <div class="logout btn-group mb-2 mr-sm-2" >
-                        <a class="btn btn-danger button__logout" aria-current="page" href="/logout">Logout</a>
+                <li sec:authorize="hasRole('ROLE_ADMIN')">
+                    <div class="dropdown">
+                        <span>Cadastros</span>
+                        <div class="dropdown-content">
+                            <a href="/especialidade">Especialidades</a>
+                            <a href="/exame">Exames</a>
+                            <a href="/medico">Médicos</a>
+                            <a href="/paciente">Pacientes</a>
+                        </div>
                     </div>
+                </li>
+                <li>
+                    <a href="/logout">Sair</a>
                 </li>
             </ul>
         </div>
-    </div>
-</nav>
+    </nav>
+</header>
 
+
+<h1>Cadastrar Paciente</h1>
 <div class="card">
 
-    <div class="titulo">
-        <h1>Cadastrar Paciente</h1>
-    </div>
 
     <div class="formulario">
         <form method="post" th:action="@{/paciente/cadastrar}" th:object="${pacienteDTO}" class="card-body row" >
