--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/static/css/header.css
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/static/css/header.css
@@ -45,14 +45,14 @@
 }
 
 .dropdown:hover {
-  background-color: #0d214f;
+  background-color: #0b182c;
   color: #b0c4de;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #0d214f;
+  background-color: #0b182c;
   min-width: 180px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
