--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/layout.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/layout.html
@@ -24,7 +24,7 @@
     <header class="header">
         <nav class="navegacao">
             <a href="/">
-                <img th:src="@{/images/image-removebg-preview (2)_resized.png}" alt="logo">
+                <img th:src="@{/images/Agp-lab-logo-header.png}" alt="logo">
             </a>
             <div class="links">
                 <ul>
