--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/paciente/form.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/paciente/form.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
     <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="icon" th:href="@{/images/favicon.ico}" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap" rel="stylesheet">
     <title>TCC | Novo Paciente</title>
 </head>
 <body>
