--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/lista-consultas.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/lista-consultas.html
@@ -13,8 +13,11 @@
     <div class="alert alert-success" th:if="${mensagem}" th:text="${mensagem}"></div>
     <div class="alert alert-danger" th:if="${erro}" th:text="${erro}"></div>
 
+    <div class="card">
 
-    <a href="/agendamentos/consulta/agendar" class="btn btn-primary">Nova Consulta</a>
+        <a href="/agendamentos/consulta/agendar" class="btn btn-primary">Nova Consulta</a>
+    </div>
+
 </div>
 
 </body>
