--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/lista-exames.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/lista-exames.html
@@ -13,8 +13,9 @@
     <div class="alert alert-success" th:if="${mensagem}" th:text="${mensagem}"></div>
     <div class="alert alert-danger" th:if="${erro}" th:text="${erro}"></div>
 
-
-    <a href="/agendamentos/exame/agendar" class="btn btn-primary">Novo Exame</a>
+    <div class="card">
+        <a href="/agendamentos/exame/agendar" class="btn btn-primary">Novo Exame</a>
+    </div>
 </div>
 
 </body>
