--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/paciente/form.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/paciente/form.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="pt-br"
       xmlns:th="http://www.thymeleaf.org">
+
+</html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
