--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/lista.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/lista.html
@@ -8,18 +8,21 @@
 <div layout:fragment="content">
     <h1>Agendamentos</h1>
 
-    <div class="card-agendamento">
-        <div class="tipo-agendamento">
-            <a href="/agendamentos/consulta">
-                <img th:src="@{/images/consulta.jpg}" alt="consulta" width="700" height="445">
-                <h2>Consultas</h2>
-            </a>
-        </div>
-        <div class="tipo-agendamento">
-            <a href="/agendamentos/exame">
-                <img th:src="@{/images/exame.jpg}" alt="exame" width="700" height="445">
-                <h2>Exames</h2>
-            </a>
+    <div class="card">
+
+        <div class="card-agendamento">
+            <div class="tipo-agendamento">
+                <a href="/agendamentos/consulta">
+                    <img th:src="@{/images/consulta.jpg}" alt="consulta" width="700" height="445">
+                    <h2>Consultas</h2>
+                </a>
+            </div>
+            <div class="tipo-agendamento">
+                <a href="/agendamentos/exame">
+                    <img th:src="@{/images/exame.jpg}" alt="exame" width="700" height="445">
+                    <h2>Exames</h2>
+                </a>
+            </div>
         </div>
     </div>
 </div>
