--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/home.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/home.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +10,44 @@
 
 <body>
     <div layout:fragment="content">
-    </div>
-</body>
 
+        <h1>Home</h1>
+        
+        <div class="card">
+
+            <div class="card-home">
+                <img th:src="@{/images/3415.jpg_860.jpg}">
+                <div class="card-home-texto">
+                    <h2>Resumo</h2>
+                    <p>Resumo — A pandemia de COVID-19, que começou em 2020, revelou a vulnerabilidade do mundo diante de crises de saúde e a importância de repensar a maneira como lidamos com questões médicas. Hospitais e laboratórios, tradicionalmente lotados e propícios à formação de filas, representavam um risco significativo durante a pandemia, aumentando a exposição e a disseminação do vírus. Como resposta a essa necessidade premente, este projeto visa utilizar a tecnologia para otimizar o atendimento em laboratórios.
+                        O propósito central deste projeto é implementar um sistema inovador que emprega um totem equipado com uma câmera e um software desktop para realizar o reconhecimento facial dos pacientes. Esse processo permite a coleta de dados pessoais do paciente, que são, então, encaminhados para um sistema de gerenciamento de filas baseado em uma aplicação web. Através dessa aplicação, os pacientes podem validar suas informações e agendar consultas de forma ágil e eficiente, sem a necessidade de enfrentar longas filas para realização de exames.
+                    </p>
+                </div>
+            </div>
+
+            <div class="card-home">
+                    <div class="card-home-texto">
+                        <h2>Introdução</h2>
+
+                        <img th:src="@{/images/dicas-para-deixar-seu-consultorio-medico-sempre-lotado.jpg}">
+                        <p>A
+                            partir de 26 de fevereiro de 2020, quando foi confirmado o primeiro caso de Covid-19 no Brasil, foi possível perceber a falta de estrutura em ambientes que envolvem a área da saúde, principalmente em hospitais e laboratórios, locais onde, para fazer um teste de Coronavírus, os pacientes precisavam esperar horas em uma fila [1].
+                        </p>
+                        <p>Essa situação destacou uma carência significativa em nossa infraestrutura de saúde, e a pandemia global de COVID-19 revelou as deficiências existentes nos sistemas de atendimento médico, principalmente em hospitais e laboratórios. Em muitos casos, para realizar um simples teste de COVID-19, os pacientes eram submetidos a longas e demoradas filas de espera, aumentando consideravelmente o risco de exposição ao vírus [1].</p>
+                        <p>
+                            Pensando na necessidade de melhorar o tempo que as pessoas passam em filas de laboratórios, surgiu a oportunidade de criar um projeto baseado em tecnologia, com o propósito de otimizar as consultas médicas em laboratórios. No âmbito deste projeto, a utilização do reconhecimento facial desempenha um papel fundamental.
+                        </p>
+                        <p>
+                            O objetivo principal deste projeto é implementar um sistema que utiliza o reconhecimento facial para confirmar a presença do paciente no local da consulta já marcada. Esta abordagem visa reduzir significativamente o tempo de espera dos pacientes e minimizar o risco de exposição à COVID-19.
+                        </p>
+                        <p>De acordo com uma pesquisa de mercado realizada pela Juniper Research: Digital Technology Market Research Services, o mercado de reconhecimento facial está em constante crescimento, com uma previsão de aumento de 120% até o ano de 2025 [2]. O reconhecimento facial está se tornando cada vez mais acessível e é amplamente adotado em novos projetos, incluindo soluções de desbloqueio de smartphones e tecnologias inovadoras, como o "selfie pay" [3], que permite efetuar pagamentos por meio do reconhecimento facial.</p>
+                        <p>O projeto proposto visa coletar informações do paciente no momento em que ele entra no estabelecimento de saúde, eliminando a necessidade de aguardar em filas para atendimento inicial e triagem. Com o uso do reconhecimento facial, o processo de check-in torna-se automatizado e mais eficiente. O sistema será composto por duas aplicações, ambas com acesso ao mesmo banco de dados, permitindo o fluxo contínuo de informações entre elas.</p>
+                        <p>A primeira aplicação desktop simulará um totem, onde o paciente poderá selecionar o exame desejado. Através do reconhecimento facial, as informações do paciente serão coletadas, separadas e armazenadas para referência posterior. A segunda aplicação, baseada na web, exibirá os dados coletados na primeira aplicação e fornecerá uma tela para a validação do convênio. Além disso, será implementada uma simulação de uma API (Application Programming Interface) que se comunicará diretamente com o sistema da operadora de convênios. Após a aprovação, os pacientes serão encaminhados à ala de exames do laboratório, garantindo um processo eficiente e simplificado.</p>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+</body>
 </html>
