atualiza paginas para paciente e medico

--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/form.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/form.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ulraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout.html}">
+      layout:decorate="~{layout-geral.html}">
 <head>
     <link rel="stylesheet" th:href="@{/css/style.css}" />
     <title>TCC | Agendamento</title>
