--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/lista-consultas-medico.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/lista-consultas-medico.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout.html}">
+      layout:decorate="~{layout-geral.html}">
 <head>
     <title>TCC | Agendamentos</title>
 </head>
@@ -15,7 +15,15 @@
 
     <div class="card">
 
-        <a href="/agendamentos/consulta/agendar" class="btn btn-primary">Nova Consulta</a>
+        <div th:each="agendamento : ${agendamentos}">
+            <div class="texto-card" >
+                <span th:text="${agendamento.dataConsulta}" ></span>
+                <span th:text="${agendamento.statusAgendamentoMedico}" ></span>
+                <span th:text="${agendamento.horario.horaMinuto}"></span>
+                <span th:text="${agendamento.medico.nome}" ></span>
+                <span th:text="${agendamento.Especialidade.titulo}"></span>
+            </div>
+        </div>
     </div>
 
 </div>
