--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/login/login.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/login/login.html
@@ -17,6 +17,10 @@
 
     <div class="alert alert-success" th:if="${mensagem}" th:text="${mensagem}"></div>
 
+    <div class="alert alert-danger" th:if="${loginError}">
+        Usuário ou senha incorretos. Tente novamente.
+    </div>
+
     <div class="card-login">
 
         <div class="formulario-login">
@@ -24,7 +28,7 @@
             <div class=" w-100 d-flex flex-column justify-content-center p-5">
 
                 <div class="text-center">
-                    <img th:src="@{/images/Agp-lab-logo.png}" alt="logo" width="120" height="70">
+                    <img th:src="@{/images/Agp-lab-logo-header.png}" alt="logo">
                     <h3 class="card-title">Seja bem-vindo.</h3>
                     <p class="text-muted">Realize seu login para continuar</p>
                 </div>
