--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/especialidade/lista.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/especialidade/lista.html
@@ -40,6 +40,7 @@
                         <td th:text="${especialidade.titulo}"></td>
                         <td>
                             <a th:href="@{/especialidade/detalhes(idEspecialidade=${especialidade.id})}" class="btn btn-outline-secondary">Detalhes</a>
+                            <a th:href="@{/especialidade/cadastrar(idEspecialidade=${especialidade.id})}" class="btn btn-outline-warning">Editar</a>
                             <a th:href="@{/especialidade/excluir(idEspecialidade=${especialidade.id})}" class="btn btn-outline-danger"  onclick="return confirm('Você deseja realmente excluir esta Especialidade?')">Excluir</a>
                         </td>
                     </tr>
