--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/lista-exames-paciente.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/lista-exames-paciente.html
@@ -8,7 +8,7 @@
 <div layout:fragment="content">
     <h1>Agendamentos</h1>
     <div class="alert alert-primary" th:if="${#lists.isEmpty(agendamentos)}">
-        Não possui nenhum agendamentoConsulta!
+        Não possui nenhum Agendamento de Exame!
     </div>
     <div class="alert alert-success" th:if="${mensagem}" th:text="${mensagem}"></div>
     <div class="alert alert-danger" th:if="${erro}" th:text="${erro}"></div>
